// ============================================================
// 低空智能巡检平台 - 业务域 Schema（当前实现）
// 数据库：PostgreSQL
// 说明：本文件只覆盖当前已落地业务表
// ============================================================

Project low_altitude_business_current {
  database_type: 'PostgreSQL'
  Note: '当前实现：无人机台账 + 无人机分配关系'
}

// ============================================================
// 1. drones 无人机台账表
// ============================================================
Table drones [note: '无人机台账'] {
  id bigserial [pk, note: 'id 主键']
  code varchar(64) [not null, unique, note: 'code 业务编码']
  name varchar(128) [not null, note: 'name 无人机名称']
  model varchar(128) [not null, note: 'model 型号']
  serial_no varchar(128) [not null, unique, note: 'serial_no 出厂序列号']
  status varchar(16) [not null, default: 'DISABLED', note: 'status ENABLED/DISABLED/MAINTENANCE/RETIRED']
  org_id bigint [note: 'org_id 组织ID（预留）']
  created_by_staff_id bigint [note: 'created_by_staff_id 创建人staff_id（审计/OWN预留）']
  created_at timestamp [not null, default: `now()`, note: 'created_at 创建时间']
  updated_at timestamp [not null, default: `now()`, note: 'updated_at 更新时间']
}

// ============================================================
// 2. drone_assignments 无人机分配关系表
// ============================================================
Table drone_assignments [note: '无人机与飞手分配关系'] {
  id bigserial [pk, note: 'id 主键']
  drone_id bigint [not null, ref: > drones.id, note: 'drone_id 无人机ID']
  staff_id bigint [not null, ref: > staff_profiles.id, note: 'staff_id 飞手staff_profile ID']
  status varchar(16) [not null, default: 'ACTIVE', note: 'status ACTIVE/INACTIVE']
  start_at timestamp [not null, default: `now()`, note: 'start_at 生效时间']
  end_at timestamp [note: 'end_at 结束时间']
  created_by_staff_id bigint [note: 'created_by_staff_id 操作人staff_id']
  created_at timestamp [not null, default: `now()`, note: 'created_at 创建时间']
  updated_at timestamp [not null, default: `now()`, note: 'updated_at 更新时间']

  indexes {
    (drone_id, staff_id, status) [name: 'idx_drone_staff_status']
  }
}

// 注意：真实数据库中存在“部分唯一约束”
// uniq_active_drone_staff_assignment: unique(drone_id, staff_id) where status='ACTIVE'
// DBML 这里用注释表达，实际以 Django migration 为准。
